[package]
name = "zainthemaynnn"
description = "my website"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-files = "0.6.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
base64 = "0.13.0"
image = "0.24.2"
imageproc = "0.23.0"
lettre = "0.9.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
